tests/baselines/reference/classAbstractImportInstantiation.errors.txt
classAbstractImportInstantiation.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
classAbstractImportInstantiation.ts(4,5): error TS2511: Cannot create an instance of an abstract class.
classAbstractImportInstantiation.ts(9,1): error TS2511: Cannot create an instance of an abstract class.


==== classAbstractImportInstantiation.ts (3 errors) ====
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export abstract class A {}
        
        new A;
        ~~~~~
!!! error TS2511: Cannot create an instance of an abstract class.
    }
    
    import myA = M.A;
    
    new myA;
    ~~~~~~~
!!! error TS2511: Cannot create an instance of an abstract class.
    